--- a/modern-web-app/.github/workflows/pipeline.yml
+++ b/modern-web-app/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello World step
         run: echo "Hello World!"
-        
+
 defaults:
   run:
     working-directory: modern-web-app
@@ -31,4 +31,48 @@ jobs:
         run: |
           npm ci
           npm run test:unit
-```
+
+jobs:
+    [....]
+    build:
+        name: Build
+        needs: test
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v2
+            - name: Setup Node.js ${{ env.NODE_VERSION }}
+              uses: actions/setup-node@v1
+              with:
+                  node-version: ${{ env.NODE_VERSION }}
+            - name: Build the application
+              run: |
+                npm ci
+                npm run build
+            - name: Upload artifacts
+              uses: actions/upload-artifact@v3
+              with:
+                name: modern-web-app-v${{ github.sha }}
+                path: modern-web-app/.next/
+
+jobs:
+    [....]
+    deploy-prod:
+        name: Deploy to prod
+        needs: build
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v2
+            - name: Deploy with Node.js ${{ env.NODE_VERSION }}
+              uses: actions/setup-node@v1
+              with:
+                  node-version: ${{ env.NODE_VERSION }}
+            - name: Download build artifact
+              uses: actions/download-artifact@v3
+              with:
+                name: modern-web-app-${{ github.sha }}
+                path: artifact_to_deploy
+            - name: Deploy to prod environment
+              run: |
+               npm run deploy:simulate -- production
